--- a/mage_ai/frameworks/execution/llm/rag/blocks/transform/templates/chunking/configurations.yaml
+++ b/mage_ai/frameworks/execution/llm/rag/blocks/transform/templates/chunking/configurations.yaml
@@ -219,7 +219,7 @@ n_gram:
   inputs:
     text:
       style:
-        input_type: null
+        input_type: number
         multiline: false
         monospace: true
       type: text_field
