--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -49,9 +49,11 @@
     "cronstrue": "^2.31.0",
     "d3-color": "^3.1.0",
     "dangerously-set-html-content": "^1.0.13",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.11",
     "global": "^4.4.0",
     "html-react-parser": "^5.1.10",
+    "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
