--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -58,6 +58,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
+    "lodash": "4.17.5",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.43",
@@ -131,7 +132,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-unused-imports": "^3.2.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "4.6.4",
+    "typescript": "4.7.4",
     "yarn-audit-fix": "^9.3.7"
   }
 }
