--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ alembic>=1.7.5
 bcrypt==4.0.1
 croniter==1.3.7
 cryptography==41.0.6
-dask==2024.5.2
+dask~=2024.5.2
 datadog==0.44.0
 freezegun==1.2.2
 great-expectations==0.18.12
