--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,13 +99,11 @@ services:
   py:
     <<: *server_settings
     environment:
-      - DYNAMIC_BLOCKS_VERSION=0
-      - KERNEL_MANAGER=0
-      - MEMORY_MANAGER_PANDAS_VERSION=0
-      - MEMORY_MANAGER_POLARS_VERSION=0
-      - MEMORY_MANAGER_VERSION=0
-      - REQUIRE_USER_AUTHENTICATION=0
-      - REQUIRE_USER_PERMISSIONS=0
+      - DYNAMIC_BLOCKS_VERSION=1
+      - KERNEL_MANAGER=default
+      - MEMORY_MANAGER_PANDAS_VERSION=1
+      - MEMORY_MANAGER_POLARS_VERSION=1
+      - MEMORY_MANAGER_VERSION=1
       - VARIABLE_DATA_OUTPUT_META_CACHE=0
     ports: []
   lsp:
